# SocializeAPI

./: .env.example  .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt  schema.yaml
_socialize_api/: asgi.py  settings.py  urls.py  wsgi.py
comments/: models.py  permissions.py  serializers.py  urls.py  views.py
comments/migrations/: 0001_initial.py  0002_initial.py
connections/: models.py  serializers.py
connections/migrations/: 0001_initial.py  0002_initial.py
follows/: models.py  serializers.py  urls.py  views.py
follows/migrations/: 0001_initial.py  0002_initial.py  0003_alter_follow_from_user.py  0004_alter_follow_from_user.py
friendships/: apps.py  models.py  serializers.py  urls.py  views.py
friendships/migrations/: 0001_initial.py  0002_initial.py  0003_friendship_updated_at.py
likes/: models.py  serializers.py  urls.py  views.py
likes/migrations/: 0001_initial.py  0002_initial.py
posts/: models.py  permissions.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_initial.py  0003_alter_post_access.py  0003_rename_posted_in_comment_post_and_more.py
socialize_api/: asgi.py  settings.py  urls.py  wsgi.py
users/: models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_connection.py  0003_alter_user_email.py
